Bug 1674618 - un-template YUVConverter's color space to make it easier to reuse. r=jrmuizel

Templating the color space in the YUV converter, while optimal, does make it harder to reuse
these routines between compositing and shader sampling. After some profiling, it seems possible
to get the compiler to generate relative addressing modes for SSE constants such that they are
as fast as directly addressing constant memory. This allows us to have a table-driven YUVMatrix
instead that removes the switch()y-ness in favor of just looking up an array that doesn't impact
performance.

Differential Revision: https://phabricator.services.mozilla.com/D105414